CSS layout updates, HTML class and path updates, JS added for transitions

--- a/index.html
+++ b/index.html
@@ -3,43 +3,48 @@
     <head>
         <meta charset="UTF-8">
         <title>Jayla Bullard's Portfolio</title>
-        <link type = "text/css" rel = 'stylesheet' href="/Users/jaylabullard/Desktop/Projects/PersonalProjects/Portfolio/style.css">
+        <link type = "text/css" rel = 'stylesheet' href="style.css">
     </head>
    
     <body>
         <div> 
             <body>
                 <header class ="header">
-                    <h1 class = "header-title">Jayla Bullard</h1>
-                    <nav class = menu-nav>
-                        <ul class = "menu-list">
-                            <li><a href="/Users/jaylabullard/Desktop/Projects/PersonalProjects/portfolio2/about-me.html">About Me.</a></li>
-                            <li><a href="/Users/jaylabullard/Desktop/Projects/PersonalProjects/portfolio2/skills-page.html">Skills.</a></li>
-                            <li><a href="">Projects.</a></li>
-                            <li><a href="">Contact.</a></li>
-                        </ul>
+                    <nav class = "nav-menu">
+                        <div class = "container">
+                            <ul class = "menu-list">
+                                <li><a href="" class = "current">About Me.</a></li>
+                                <li><a href="" class = "current">Skills.</a></li>
+                                <li><a href="" class = "current">Projects.</a></li>
+                                <li><a href="" class = "current">Contact.</a></li>
+                            </ul>
+                        </div>
                     </nav>
                     <div class = "background-image-overlay">
-                        <h2 class = "background-image-text-title">Welcome</h2>
+                        <h2 class = "background-image-text-title">Welcome to Jayla Bullard's Portfolio!</h2>
                         <h4 class = "background-image-text">Self taught full-stack developer.</h4>
                     </div>
                 </header>
             </div>
-         <div>
-             <h2 class = "bio-text" >Why I chose code:</h2>
-             <p>I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put in plan in motion enabling me to quit my job in order to dedicate myself full time to achieving a career shift. </p>
-            </body>
-     </div>
-</body>
 
-<div>
-    <footer>
-        <h3 class = "footer">Contact Me:</h3>
-    <ul class = "footer-nav">
-        <li><a>Email: jaylabull@gmail.com</a></li>
-        <li><a>LinkedIn</a></li>
-        <li><a>GitHub</a></li>
-    </ul>
-    </footer>
-</div>
+             <div class = "container">
+                 <div class = "bio-text">
+                    <h2>Why I chose code:</h2>
+                    <br>
+                    <p>I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put in plan in motion enabling me to quit my job in order to dedicate myself full time to achieving a career shift. </p>
+                 </div>
+             </div>
+            </body>
+
+        <footer class = "footer">
+            <h3 class = "footer-header">Contact Me:</h3>
+            <ul class = "footer-nav">
+             <li><a>Email: jaylabull@gmail.com</a></li>
+             <li><a>LinkedIn</a></li>
+             <li><a>GitHub</a></li>
+        </ul>
+        </footer>
+
+    <script src="script.js"></script>
+</body>
 </html>
