--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <div class = "container">
                             <ul class = "menu-list">
                                 <li><a href="" class = "current">About Me.</a></li>
-                                <li><a href="" class = "current">Skills.</a></li>
+                                <li><a href="skills.html" class = "current">Skills.</a></li>
                                 <li><a href="" class = "current">Projects.</a></li>
                                 <li><a href="" class = "current">Contact.</a></li>
                             </ul>
