Removed skills html page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
                     <p>I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put in plan in motion enabling me to quit my job in order to dedicate myself full time to achieving a career shift. </p>
                  </div>
              </div>
+
+             <div class="container">
+                <div class = "grid-container row">
+                    <div class = "grid-item column">
+                        <img src="Resources/Other-html-5-icon.png" alt = "HTML5 image">    
+                    <div class="grid-item column">
+                        <img src = "Resources/css_icon.png" alt = "CSS image">
+                    </div>
+                    </div>
+                    <div class = "grid-item column">
+                        <img src = "Resources/js_icon.png" alt = "javaScript image">
+                    </div> 
+                    <div class="grid-item column">
+                        <img src="Resources/c sharp icon.svg" alt="c sharp image">
+                    </div>
+                </div>
+            </div>             
             </body>
 
         <footer class = "footer">
