--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
              <div class = "container">
                  <div class = "bio-text">
-                    <h2>Why I chose code:</h2>
+                    <h2>About Me</h2>
                     <br>
                     <p>I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put in plan in motion enabling me to quit my job in order to dedicate myself full time to achieving a career shift. </p>
                  </div>
@@ -41,16 +41,16 @@
                  <h2>Skills</h2>
                 <div class = "grid-container row">
                     <div class = "grid-item column">
-                        <img src="Resources/Other-html-5-icon.png" alt = "HTML5 image">    
+                        <img src="Pics/Other-html-5-icon.png" alt = "HTML5 image">    
                     <div class="grid-item column">
-                        <img src = "Resources/css_icon.png" alt = "CSS image">
+                        <img src = "Pics/css_icon.png" alt = "CSS image">
                     </div>
                     </div>
                     <div class = "grid-item column">
-                        <img src = "Resources/js_icon.png" alt = "javaScript image">
+                        <img src = "Pics/js_icon.png" alt = "javaScript image">
                     </div> 
                     <div class="grid-item column">
-                        <img src="Resources/c sharp icon.svg" alt="c sharp image">
+                        <img src="Pics/c sharp icon.svg" alt="c sharp image">
                     </div>
                 </div>
             </div>  
@@ -69,20 +69,20 @@
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M12 0C5.374 0 0 5.373 0 12C0 17.302 3.438 21.8 8.207 23.387C8.806 23.498 9 23.126 9 22.81V20.576C5.662 21.302 4.967 19.16 4.967 19.16C4.421 17.773 3.634 17.404 3.634 17.404C2.545 16.659 3.717 16.675 3.717 16.675C4.922 16.759 5.556 17.912 5.556 17.912C6.626 19.746 8.363 19.216 9.048 18.909C9.155 18.134 9.466 17.604 9.81 17.305C7.145 17 4.343 15.971 4.343 11.374C4.343 10.063 4.812 8.993 5.579 8.153C5.455 7.85 5.044 6.629 5.696 4.977C5.696 4.977 6.704 4.655 8.997 6.207C9.954 5.941 10.98 5.808 12 5.803C13.02 5.808 14.047 5.941 15.006 6.207C17.297 4.655 18.303 4.977 18.303 4.977C18.956 6.63 18.545 7.851 18.421 8.153C19.191 8.993 19.656 10.064 19.656 11.374C19.656 15.983 16.849 16.998 14.177 17.295C14.607 17.667 15 18.397 15 19.517V22.81C15 23.129 15.192 23.504 15.801 23.386C20.566 21.797 24 17.3 24 12C24 5.373 18.627 0 12 0Z"
-                                fill="white" fill-opacity="0.5"></path>
+                                fill="white" ></path>
                         </svg></a>
                         <a href="https://www.linkedin.com/in/jayla-bullard/" rel="noopener noreferrer" target="_blank"
                             style="transform: translate(0px, 0px);"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                             viewBox="0 0 24 24">
                             <path
-                            d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z">
+                            d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" fill="white">
                             </path>
                             </svg></a>
                             &nbsp;
                             <a id="mail-icon" href="mailto:jaylabull@gmail.com" style="transform: translate(0px, 0px);"><svg width="24"
                             height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 0V18H24V0H0ZM21.518 2L12 9.713L2.482 2H21.518ZM2 16V4.183L12 12.287L22 4.183V16H2Z"
-                            fill="white" fill-opacity="0.7"></path>
+                            fill="white" ></path>
                             </svg></a>
                     </div>
 
