--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
             </body>
       
             <footer class = "footer">
-                <h2 class = "footer-header">Contact Me:</h2>
+                <h2 class = "footer-header">Contact Me</h2>
+                <div class="links">
+                    
+                </div>
                     <div class="footer-icons">
                         <a href="https://github.com/Jaylabull" rel="noopener noreferrer" target="_blank"
                         style="transform: translate(0px, 0px);"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -78,7 +81,6 @@
                             d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" fill="white">
                             </path>
                             </svg></a>
-                            &nbsp;
                             <a id="mail-icon" href="mailto:jaylabull@gmail.com" style="transform: translate(0px, 0px);"><svg width="24"
                             height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 0V18H24V0H0ZM21.518 2L12 9.713L2.482 2H21.518ZM2 16V4.183L12 12.287L22 4.183V16H2Z"
