--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
         <meta charset="UTF-8">
         <title>Jayla Bullard's Portfolio</title>
         <link type = "text/css" rel = 'stylesheet' href="style.css">
+        
     </head>
    
     <body>
         <div> 
             <body>
                 <header class ="header">
+                 <div class = "container">
+                    <div class="header-title">
+                        <h1>Jayla Bullard</h1>
+                    </div>
                     <nav class = "nav-menu">
-                        <div class = "container">
                             <ul class = "menu-list">
-                                <li><a href="" class = "current">About Me.</a></li>
-                                <li><a href="" class = "current">Skills.</a></li>
-                                <li><a href="" class = "current">Projects.</a></li>
-                                <li><a href="" class = "current">Contact.</a></li>
+                                <li><a href="" class = "current menu-item">About Me.</a></li>
+                                <li><a href="" class = "current menu-item">Skills.</a></li>
+                                <li><a href="" class = "current menu-item">Projects.</a></li>
+                                <li><a href="" class = "current menu-item">Contact.</a></li>
                             </ul>
-                            <h1 class="header-title">Jayla Bullard</h1>
-                        </div>
                     </nav>
                 </header>
             </div>
+        </div>
         
                 <div class = "background-image-overlay">
                     <h2 class = "background-image-text-title">Welcome to my Portfolio!</h2>
