Updated about me section

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
     </div>
 
              <div class = "container">
-                 <div class = "bio-text">
                     <h2>About Me</h2>
                     <br>
-                    <p>I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put in plan in motion enabling me to quit my job in order to dedicate myself full time to achieving a career shift. </p>
+                 <div class = "about-section">
+                     <div class="bio_img">
+                        <img src="attachments/bio_pic.JPG" alt="Bio Picture" width="100px" height="100px" class =" bio_pic">
+                     </div>
+
+                    <p class="about-text">I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put in plan in motion enabling me to quit my job in order to dedicate myself full time to achieving a career shift. </p>
                  </div>
              </div>
 
