--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="links">
                     
                 </div>
-                    <!-- <div class="footer-icons"> -->
+                    <div class="footer-icons">
                         <a href="https://github.com/Jaylabull" rel="noopener noreferrer" target="_blank"
                         style="transform: translate(0px, 0px);"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -86,7 +86,7 @@
                             <path d="M0 0V18H24V0H0ZM21.518 2L12 9.713L2.482 2H21.518ZM2 16V4.183L12 12.287L22 4.183V16H2Z"
                             fill="white" ></path>
                             </svg></a>
-                    <!-- </div> -->
+                    </div>
 
             </footer>
       
