Bio and CSS transform updates

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <img src="attachments/bio_pic.JPG" alt="Bio Picture" width="100px" height="100px" class =" bio_pic">
                      </div>
 
-                    <p class="about-text">I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put in plan in motion enabling me to quit my job in order to dedicate myself full time to achieving a career shift. </p>
+                    <p class="about-text">I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put a plan in motion to make a career shift into the world of technology. While I do have a STEM background, coding has provided more satisfation than being in a lab ever did. <br><br> In my spare time I love to read and spend time in the great outdoors.</p>
                  </div>
              </div>
 
