--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                      <div class="bio_img">
                         <img src="attachments/bio_pic.JPG" alt="Bio Picture" width="100px" height="100px" class =" bio_pic">
                      </div>
-
                     <p class="about-text">I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put a plan in motion to make a career shift into the world of technology. While I do have a STEM background, coding has provided more satisfation than being in a lab ever did. <br><br> In my spare time I love to read and spend time in the great outdoors.</p>
                  </div>
              </div>
@@ -56,7 +55,37 @@
             <div class="container">
                 <div class="projects">
                     <h2>Projects</h2>
+            </div>
+                <div class="project-card">
+                    <div class="project-width">
+                        <h4 class="card-title"> <strong>TODO List</strong> </h4>
+                        <div class="card_grid">
+                            <video class = "video" src="attachments/todo_list.mp4" width="200px" height="200px" autoplay muted loop></video>
+                            <p class="card-desc">This is a simple To-Do list that uses HTML, CSS, and JavaScript. The user can type in an action to accomplish. When complete the user can then cross out said option or remove it completely by using the left and right mouse click. The difficulty of this project was to add the actions that corresponded to the mouse clicks.</p>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-width">
+                        <h4 class="card-title"> <strong>Horoscope Simulator</strong> </h4>
+                        <div class="card_grid">
+                            <video class = "video" src="attachments/horoscope_simulator.mp4" width="200px" height="200px" autoplay muted loop></video>
+                            <p class="card-desc">The Horoscope Simulator was a group project, where we came up with an original idea and used our coding knowledge to build this app from the ground up. Using HTML, CSS, JavaScript, and AJAX, this project determines your horoscope based on user input. A horoscope API provides a horoscope, along with other fun data, such as the particular day’s color and lucky number. The difficulty of this project was presenting the data from the API.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-width">
+                        <h4 class="card-title"> <strong>movie app</strong> </h4>
+                        <div class="card_grid">
+                            <video class = "video" src="attachments/movie_app.mp4" width="200px" height="200px" autoplay muted loop></video>
+                            <p class="card-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus similique, aspernatur provident laudantium voluptatem eos itaque perferendis sapiente veritatis blanditiis saepe numquam culpa fuga corrupti rerum suscipit, voluptas quaerat voluptates!</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             </body>
