--- a/index.html
+++ b/index.html
@@ -60,8 +60,17 @@
                     <div class="project-width">
                         <h4 class="card-title"> <strong>TODO List</strong> </h4>
                         <div class="card_grid">
-                            <video class = "video" src="attachments/todo_list.mp4" width="200px" height="500px" autoplay muted loop></video>
+                            <video class = "video" src="attachments/todo_list.mp4" width="200px" height="500px" autoplay muted loop href = "https://todolistapp-jayla.netlify.app/"></video>
                             <p class="card-desc">This is a simple To-Do list that uses HTML, CSS, and JavaScript. The user can type in an action to accomplish. When complete the user can then cross out said option or remove it completely by using the left and right mouse click. The difficulty of this project was to add the actions that corresponded to the mouse clicks.</p>
+                        </div>
+                        <div class="lang-align">
+                            <ul class="languages" id = "languages">
+                                <li>html5</li>
+                                <li>css</li>
+                                <li>JavaScript</li>
+                                <li>github</li>
+                                <li>netlify</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -71,7 +80,18 @@
                         <h4 class="card-title"> <strong>Horoscope Simulator</strong> </h4>
                         <div class="card_grid">
                             <p class="card-desc">The Horoscope Simulator was a group project, where we came up with an original idea and used our coding knowledge to build this app from the ground up. Using HTML, CSS, JavaScript, and AJAX, this project determines your horoscope based on user input. A horoscope API provides a horoscope, along with other fun data, such as the particular day’s color and mood. The difficulty of this project was presenting the data from the API.</p>
-                            <video class = "video" src="attachments/horoscope_simulator.mp4" width="200px" height="500px" autoplay muted loop></video>
+                            <video class = "video" src="attachments/horoscope_simulator.mp4" width="200px" height="500px" autoplay muted loop href = "https://horoscope-simulator.netlify.app/"></video>
+                        </div>
+                        <div class="lang-align">
+                            <ul class="languages" id = "languages">
+                                <li>html5</li>
+                                <li>css</li>
+                                <li>JavaScript</li>
+                                <li>API's</li>
+                                <li>AJAX</li>
+                                <li>github</li>
+                                <li>netlify</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -81,7 +101,18 @@
                         <h4 class="card-title"> <strong>movie app</strong> </h4>
                         <div class="card_grid">
                             <video class = "video" src="attachments/movie_app.mp4" width="200px" height="500px" autoplay muted loop></video>
-                            <p class="card-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus similique, aspernatur provident laudantium voluptatem eos itaque perferendis sapiente veritatis blanditiis saepe numquam culpa fuga corrupti rerum suscipit, voluptas quaerat voluptates!</p>
+                            <p class="card-desc" href = "https://moviesearchapp-jayla.netlify.app/">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus similique, aspernatur provident laudantium voluptatem eos itaque perferendis sapiente veritatis blanditiis saepe numquam culpa fuga corrupti rerum suscipit, voluptas quaerat voluptates!</p>
+                        </div>
+                        <div class="lang-align">
+                            <ul class="languages" id = "languages">
+                                <li>html5</li>
+                                <li>css</li>
+                                <li>JavaScript</li>
+                                <li>API's</li>
+                                <li>AJAX</li>
+                                <li>github</li>
+                                <li>netlify</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
