--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     
     </div>
 
-             <div class = "container hide" >
+             <div class = "container" >
                     <h2>About Me</h2>
                     <br>
-                 <div class = "about-section hide" id = "aboutme">
+                 <div class = "about-section" id = "aboutme">
                      <div class="bio_img">
                         <img src="attachments/bio_pic.JPG" alt="Bio Picture" width="100px" height="100px" class =" bio_pic">
                      </div>
@@ -56,7 +56,7 @@
                 <div class="projects" id = "projects">
                     <h2>Projects</h2>
             </div>
-                <div class="project-card">
+                <div class="project-card hide">
                     <div class="project-width">
                         <h4 class="card-title"> <strong>TODO List</strong> </h4>
                         <div class="card_grid">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <div class="project-card hide">
                     <div class="project-width">
                         <h4 class="card-title"> <strong>Horoscope Simulator</strong> </h4>
                         <div class="card_grid">
@@ -96,7 +96,7 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <div class="project-card hide">
                     <div class="project-width">
                         <h4 class="card-title"> <strong>movie app</strong> </h4>
                         <div class="card_grid">
@@ -149,7 +149,7 @@
 
             </footer>
       
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
