--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Great+Vibes&family=Spectral+SC:wght@200&display=swap" rel="stylesheet">
 
+        <!-- Icon image -->
+        <link rel="icon" href="attachments/jb-icon.png">
     </head>
    
     <body>
@@ -35,10 +37,12 @@
     
     </div>
 
-             <div class = "container" >
+             <div class = "container">
+                 <div id = "aboutme" class = "aboutme">
                     <h2>About Me</h2>
+                 </div>
                     <br>
-                 <div class = "about-section" id = "aboutme">
+                 <div class = "about-section">
                      <div class="bio_img">
                         <img src="attachments/bio_pic.JPG" alt="Bio Picture" width="100px" height="100px" class =" bio_pic">
                      </div>
