Edited sections and added links to projects

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <nav class = "nav-menu">
                             <ul class = "menu-list">
                                 <li><a href="#aboutme" class = "current menu-item">About Me.</a></li>
-                                <li><a href="#skills" class = "current menu-item">Skills.</a></li>
                                 <li><a href="#projects" class = "current menu-item">Projects.</a></li>
+                                <li><a href="#resume" class = "current menu-item">Resume.</a></li>
                                 <li><a href="#contact" class = "current menu-item">Contact.</a></li>
                             </ul>
                     </nav>
@@ -49,17 +49,11 @@
                     <p class="about-text">I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put a plan in motion to make a career shift into the world of technology. While I do have a STEM background, coding has provided more satisfation than being in a lab ever did. <br><br> In my spare time I love to read and spend time in the great outdoors.</p>
                  </div>
              </div>
-
-             <div class="container">
-                 <div class="skills" id = "skills">
-                    <h2>Skills</h2>
-                 </div>
-            </div>  
             
             <div class="container">
                 <div class="projects" id = "projects">
                     <h2>Projects</h2>
-            </div>
+                </div>
                 <div class="project-card hide">
                     <div class="project-width">
                         <h4 class="card-title"> <strong>TODO List</strong> </h4>
@@ -75,6 +69,10 @@
                                 <li>github</li>
                                 <li>netlify</li>
                             </ul>
+                        </div>
+                        <div class="links">
+                            <a href="https://github.com/Jaylabull/TODO_List" target="_blank" rel="noopener noreferrer" download>Source Code</a>
+                            <a href="https://todolistapp-jayla.netlify.app/" target="_blank" rel="noopener noreferrer" download>Site</a>
                         </div>
                     </div>
                 </div>
@@ -97,6 +95,10 @@
                                 <li>netlify</li>
                             </ul>
                         </div>
+                        <div class="links">
+                            <a href="https://github.com/Jaylabull/HoroscopeSimulator" target="_blank" rel="noopener noreferrer" download>Source Code</a>
+                            <a href="https://horoscope-simulator.netlify.app/" target="_blank" rel="noopener noreferrer" download>Site</a>
+                        </div>
                     </div>
                 </div>
 
@@ -118,9 +120,22 @@
                                 <li>netlify</li>
                             </ul>
                         </div>
+                        <div class="links">
+                            <a href="https://github.com/Jaylabull/MovieApp" target="_blank" rel="noopener noreferrer" download>Source Code</a>
+                            <a href="https://moviesearchapp-jayla.netlify.app/" target="_blank" rel="noopener noreferrer" download>Site</a>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <div class="container">
+                <div class="resume" id = "resume">
+                   <h2>Resume</h2>
+                    <div class="links">
+                        <a href="http://" target="_blank" rel="noopener noreferrer" download>Resume</a>
+                    </div>
+                </div>
+           </div>  
 
             </body>
       
