--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                      <div class="bio_img">
                         <img src="attachments/bio_pic.JPG" alt="Bio Picture" width="100px" height="100px" class =" bio_pic">
                      </div>
-                    <p class="about-text">I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how creative I could really be. I put a plan in motion to make a career shift into the world of technology. While I do have a STEM background, coding has provided more satisfation than being in a lab ever did. <br><br> In my spare time I love to read and spend time in the great outdoors.</p>
+                    <p class="about-text">I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how similar coding was to a puzzle (which I enojoy in my spare time) and how satisfying it was to solve problems that often occur in programming. I put a plan in motion to make a career shift into the world of technology. While I do have a STEM background, in biology, programming has fully encapsulated my interest. I hope to inocorporate my previous lab knowledge into a developer role.  <br><br> In my spare time I love to read and spend time in the great outdoors.</p>
                  </div>
              </div>
             
@@ -71,8 +71,8 @@
                             </ul>
                         </div>
                         <div class="links">
-                            <a href="https://github.com/Jaylabull/TODO_List" target="_blank" rel="noopener noreferrer" download>Source Code</a>
-                            <a href="https://todolistapp-jayla.netlify.app/" target="_blank" rel="noopener noreferrer" download>Site</a>
+                            <a href="https://github.com/Jaylabull/TODO_List" target="_blank" rel="noopener noreferrer" download><p>Source Code</p></a>
+                            <a href="https://todolistapp-jayla.netlify.app/" target="_blank" rel="noopener noreferrer" download><p>Site</p></a>
                         </div>
                     </div>
                 </div>
@@ -96,8 +96,8 @@
                             </ul>
                         </div>
                         <div class="links">
-                            <a href="https://github.com/Jaylabull/HoroscopeSimulator" target="_blank" rel="noopener noreferrer" download>Source Code</a>
-                            <a href="https://horoscope-simulator.netlify.app/" target="_blank" rel="noopener noreferrer" download>Site</a>
+                            <a href="https://github.com/Jaylabull/HoroscopeSimulator" target="_blank" rel="noopener noreferrer" download><p>Source Code</p></a>
+                            <a href="https://horoscope-simulator.netlify.app/" target="_blank" rel="noopener noreferrer" download><p>Site</p></a>
                         </div>
                     </div>
                 </div>
@@ -121,8 +121,8 @@
                             </ul>
                         </div>
                         <div class="links">
-                            <a href="https://github.com/Jaylabull/MovieApp" target="_blank" rel="noopener noreferrer" download>Source Code</a>
-                            <a href="https://moviesearchapp-jayla.netlify.app/" target="_blank" rel="noopener noreferrer" download>Site</a>
+                            <a href="https://github.com/Jaylabull/MovieApp" target="_blank" rel="noopener noreferrer" download><p>Source Code</p></a>
+                            <a href="https://moviesearchapp-jayla.netlify.app/" target="_blank" rel="noopener noreferrer" download><p>Site</p></a>
                         </div>
                     </div>
                 </div>
