--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="resume" id = "resume">
                    <h2>Resume</h2>
                     <div class="links">
-                        <a href="http://" target="_blank" rel="noopener noreferrer" download>Resume</a>
+                        <a href="attachments/jayla_bullard_resume_pdf.pdf" target="_blank" rel="noopener noreferrer" download>Resume</a>
                     </div>
                 </div>
            </div>  
