--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <h4 class="card-title"> <strong>movie app</strong> </h4>
                         <div class="card_grid">
                             <video class = "video" src="attachments/movie_app.mp4" width="200px" height="500px" autoplay muted loop></video>
-                            <p class="card-desc" href = "https://moviesearchapp-jayla.netlify.app/">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus similique, aspernatur provident laudantium voluptatem eos itaque perferendis sapiente veritatis blanditiis saepe numquam culpa fuga corrupti rerum suscipit, voluptas quaerat voluptates!</p>
+                            <p class="card-desc" href = "https://moviesearchapp-jayla.netlify.app/"> Using HTML, CSS, JavaScript, and ajax, a user can view the most popular movies. The movie option then has a color coded rating and an interactive overview. The user can also search a specific movie title or search a movie with a specific word. Looking for a movie with action or love? Give the app a try below! </p>
                         </div>
                         <div class="lang-align">
                             <ul class="languages" id = "languages">
