--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                      <div class="bio_img">
                         <img src="attachments/bio_pic.JPG" alt="Bio Picture" width="100px" height="100px" class =" bio_pic">
                      </div>
-                    <p class="about-text">I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how similar coding was to a puzzle (which I enojoy in my spare time) and how satisfying it was to solve problems that often occur in programming. I put a plan in motion to make a career shift into the world of technology. While I do have a STEM background, in biology, programming has fully encapsulated my interest. I hope to inocorporate my previous lab knowledge into a developer role.  <br><br> In my spare time I love to read and spend time in the great outdoors.</p>
+                    <p class="about-text">I began self-teaching the main front-end languages (html, css, and JavaScript) in attempt to acquire different skills. While going through each language I realized how similar coding was to a puzzle (which I enjoy in my spare time) and how satisfying it was to solve problems that often occur in programming. I put a plan in motion to make a career shift into the world of technology. While I do have a STEM background, in biology, programming has fully encapsulated my interest. I hope to inocorporate my previous lab knowledge into a developer role.  <br><br> In my spare time I love to read and spend time in the great outdoors.</p>
                  </div>
              </div>
             
